文言の修正

--- a/frontend/src/app/components/input-date/input-date.component.html
+++ b/frontend/src/app/components/input-date/input-date.component.html
@@ -54,6 +54,6 @@
   </div>
   <button class="button-show-graph" type="button" routerLink="/normal-graph">グラフを表示する</button>
   <button class="category-button" type="button" routerLink="/category-graph">カテゴリごとに表示する</button><br><br>
-  <button class="google" type="button" (click)=google_calendar()>googleカレンダーの情報を取得する</button><br>
+  <button class="google" type="button" (click)=google_calendar()>googleカレンダーの情報を最新化する</button><br>
   ※「個人作業」が含まれているものは別カテゴリとして保存します。
 </div>
