--- a/frontend/src/app/components/show-normal-graph/show-normal-graph.component.html
+++ b/frontend/src/app/components/show-normal-graph/show-normal-graph.component.html
@@ -14,10 +14,6 @@
           [data]="data">
         </app-show-graph>
       </div>
-      <div class="select-date" *ngIf="change">
-          <div class="hour-list" *ngFor="let category of names">
-              {{ category }}
-          </div>
-      </div>
+      <div class="select-date" *ngIf="change"></div>
     </div>
 </div>
