ボタンを非活性に修正

--- a/frontend/src/app/components/input-date/input-date.component.html
+++ b/frontend/src/app/components/input-date/input-date.component.html
@@ -53,6 +53,5 @@
   </div>
   <button class="button-show-graph" type="button" routerLink="/normal-graph">グラフを表示する</button>
   <button class="category-button" type="button" routerLink="/category-graph">カテゴリごとに表示する</button><br><br>
-  <button class="google" type="button" (click)=google_calendar()>googleカレンダーの情報を最新化する</button><br>
-  ※「個人作業」が含まれているものは別カテゴリとして保存します。
+  <button class="google" id="aaa" type="button" (click)=google_calendar() disabled="disabled">googleカレンダーの情報を最新化する</button><br>
 </div>
